Bug 1103107 - Don't Destroy() RenderFrameChild if it is already ActorDestroy()ed.